--- a/src/Components/About_me/SobreMi.css
+++ b/src/Components/About_me/SobreMi.css
@@ -1,6 +1,6 @@
-#sobreMi{
-  min-height: 100vh;
-  margin-top: 0;
+.sobreMi{
+
+  margin-top: 7rem;
 }
 
 
@@ -18,6 +18,10 @@
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.descripcion p {
+  font-size: 1.2rem;
 }
 
   
@@ -434,8 +438,12 @@
     margin-bottom: 0.5rem;
   }
 
-  #sobreMi{
+  .sobreMi{
     margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .foto_about_me{
