--- a/src/Components/Introduccion/Introduccion.css
+++ b/src/Components/Introduccion/Introduccion.css
@@ -12,10 +12,9 @@ h1{
 
 h2{
   font-size: 2.3rem;
-  
 }
 
-p{
+.presentacion p{
   font-size: 1.3rem;
 }
 
@@ -134,6 +133,7 @@ img{
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding-left: 0;
     }
 
     .presentacion h1{
