--- a/src/Components/Selector/Selector.css
+++ b/src/Components/Selector/Selector.css
@@ -148,13 +148,13 @@
     background:#000000;
     font-size: 1.5rem;
     font-family: "Montserrat";
-    color: rgb(248, 79, 36);
+    color: rgb(8, 138, 212);
     letter-spacing: 0.5rem;
   }
   
   .s0{
     background: #000000;
-    color: #08d1eb;
+    color: #eb2208;
     font-size: 1.5rem;
     font-family: "Montserrat";
     letter-spacing: 0.5rem;
@@ -170,7 +170,7 @@
   
   .s3{
     background: #000000;
-    color: #eb0808;
+    color: #eb4808;
     letter-spacing: 8px;
     font-family: "Montserrat";
     letter-spacing: 0.5rem;
@@ -210,9 +210,9 @@
     font-size: 2rem;
   }
   
-  .s5{
+  .s4{
     background: rgb(0, 0, 0);
-    color: #f0dde8;
+    color: #da0b83;
     font-size: 1.7rem;
     font-family: "Montserrat";
     letter-spacing: 0.5rem;
